@@ -7,10 +7,11 @@ The project website is located at http://oss.codepoet.no/revelation/
 
 Revelation depends on the following software:
 
-- GNOME 2.6
-- GTK+ 2.4
+- GNOME 2.10
+- GTK+ 2.6
 - Python 2.3
-- pygtk 2.4
-- gnome-python 2.6
+- pygtk 2.8
+- gnome-python 2.10
+- gnome-python-extras 2.10
 - pycrypto 1.9
 - cracklib
