@@ -8,6 +8,7 @@ Bugfixes:
 - removed the Help > Homepage menu item
 
 Code changes:
+- depend on pygtk 2.8 and gnome-python 2.10
 - removed gnomemisc module
 - don't use deprecated gnome-python modules
 - moved preference dialog from dialog module to main script
